syntax = "proto3";
import "node_modules/@asterai/sdk/protobuf/asterai.proto";

service Math {
  rpc processQuery(PluginContext) returns (ProcessQueryOutput);
  rpc add(BinaryOperationInput) returns (CalculationOutput);
  rpc mul(BinaryOperationInput) returns (CalculationOutput);
  rpc div(BinaryOperationInput) returns (CalculationOutput);
  rpc pow(BinaryOperationInput) returns (CalculationOutput);
}

message ProcessQueryOutput {}

message BinaryOperationInput {
  PluginContext context = 1;
  double a = 2;
  double b = 3;
}

message CalculationOutput {
  string system_message = 1;
}
